--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,8 @@ font-family: 'Poppins', sans-serif;
 	--themeBg: #FF854B;
 	--gradientBg: linear-gradient(290deg, #FE5D5D -1.16%, #FF854B 100%);
 	--gradientBg2: linear-gradient(90deg, #6199F8 0.12%, #4742F8 99.9%);
-	--white: #fff
+	--white: #fff;
+	--bodyBg:#FEF8F4
 
 }
 *{
@@ -57,10 +58,11 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	font-weight: 300;
+	font-weight: 400;
 	font-family: 'Poppins', sans-serif;
 	line-height: 27px;
 	color: var(--bodyFont);
+	background: var(--bodyBg);
 }
 ol, ul {
 	list-style: none;
@@ -86,4 +88,44 @@ a{
 a,a:hover{
 	text-decoration: none;
 	color: inherit;
+}
+
+
+/* Pagination Items */
+
+.swiper-pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+	left: 50%;
+    transform: translateX(-50%);
+}
+
+.swiper-pagination span.swiper-pagination-bullet {
+    width: 15px;
+    height: 15px;
+    background: #DADADA;
+    border-radius: 50%;
+    margin: 0 5px;
+	cursor: pointer;
+	transition: all .3s;
+}
+.swiper-pagination span.swiper-pagination-bullet-active{
+	background-image: linear-gradient(290deg, #FE5D5D -1.16%, #FF854B 100%);
+}
+
+/* Section titles */
+.content_like_title h1 {font-size: 40px;font-weight: 700;line-height: 48px;margin-bottom: 15px;}
+
+.content_like_title p {  
+    font-size: 16px; 
+    font-weight: 400;
+    line-height: 27.2px;
+}
+
+.section-title .content_like_title p {
+    max-width: 530px;
+    margin: auto;
 }
