--- a/src/style.css
+++ b/src/style.css
@@ -136,10 +136,145 @@ button{
     max-width: 530px;
     margin: auto;
 }
+@media (max-width: 767px) {
+    .content_like_title h1 {
+        font-size: 28px; 
+        line-height: 32px;
+        margin-bottom: 10px;
+    }
+    .swiper-pagination span.swiper-pagination-bullet {
+        width: 10px;
+        height: 10px; 
+        margin: 0 2px; 
+    } 
+    
 
+ }
 
 /* Padding of navs */
 
 .interface-wrap .swiper-wrapper {
     padding-bottom: 45px !important;
 }
+
+
+
+/* Moving animations */
+.moving_position_animatin { 
+    animation: moving_position_animatin 6s infinite linear; 
+    animation-delay: 3s;
+}
+.moving_animation { 
+    animation: moving_object 6s infinite linear;
+}
+@keyframes moving_object {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-20px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes moving_position_animatin {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-20px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+
+/* Mobile menu */
+
+ 
+
+.mmenus {
+    background: #fff;
+    min-height: 100vh;
+    width: 320px;
+    padding: 30px;
+    z-index: 99999999;
+    position: fixed;
+    margin-left: -500px;
+    transition: .3s;
+}
+.mobilemenu.open .mmenus{
+    margin-left: 0;
+} 
+.mobilemenu .overlay {
+    display: block;
+    width: 100%;
+    height: 100vh;
+    background: black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999999;
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s;
+}
+.mobilemenu.open .overlay {
+    opacity: .5;
+    visibility: visible;
+}
+.mmenus > a {
+    display: block;
+    max-width: 120px;
+}
+
+.mmenus  > .menu.open {
+    position: absolute;
+    top: 30px;
+    right: 10px;
+    transform: scale(.8);
+}
+
+.mmenus nav {
+    display: block !important;
+}
+
+.mmenus nav ul {
+    display: block !important;
+    width: 100%;
+    margin: 0;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+.mmenus nav ul li a{
+    margin-left: 0 !important;
+    margin-bottom: 10px;
+}
+.mmenus .btn1 .icon-left:before, .mmenus .btn1 .icon-left:after,
+.mmenus .btn1 .icon-right:before,.mmenus .btn1 .icon-right:after{
+    background: var(--themeBg) !important;
+}
+/* Responsiveness */
+
+ 
+ 
+/* Tablet screen :768px. */
+@media (min-width: 768px) and (max-width: 991px) {
+
+
+}
+
+ 
+/* small screen :320px. */
+@media (max-width: 767px) {
+
+ 
+}
+  
