--- a/src/style.css
+++ b/src/style.css
@@ -267,6 +267,9 @@ button{
  
 /* Tablet screen :768px. */
 @media (min-width: 768px) and (max-width: 991px) {
+    .container{
+        max-width: 700px;
+    }
 
 
 }
